
package rti;

message RequestShowOrderHistoryDates
{
	// CORRECT field IDs from rundef/async_rithmic (verified Dec 2025)
	// PB_OFFSET = 100000
	optional int32        template_id = 154467;
	repeated string       user_msg    = 132760;
}
